--- a/flask_app/templates/weather.html
+++ b/flask_app/templates/weather.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-   <title>Document</title>
+   <title>Weather App</title>
 </head>
 <body>
    <nav class="navbar sticky-top navbar-light bg-light">
@@ -18,17 +18,67 @@
       </div>
 
    </nav>
-   <div class="container">
-      <div class="card mt-5 w-50 mx-auto">
-         <div class="card-header text-center fs-2">{{city['name']}}</div>
-         <div class="card-body">
-            <h5 class="card-title">Current Weather:</h5>
-            <p class="card-text">Description: {{city['weather'][0]['description']}}</p>
-            <p class="card-text">Tempurature: {{((city['main']['temp']-273.15)*1.8 + 32) | round | int}}°F</p>
-            <p class="card-text">Humidity: {{city['main']['humidity']}}</p>
+   <div class="container d-flex m-5">
+      <div class="card m-5 w-25" >
+         <div class="row g-0">
+            <div class="col-md-4">
+               <img src="http://openweathermap.org/img/w/{{bellevue['icon']}}.png" class="img-fluid mx-auto d-block mt-5" alt="Image">
+            </div>
+         <div class="col-md-8">
+            <div class="card-body">
+               <h5 class="card-title">{{bellevue['name']}}</h5>
+               <h6>{{((bellevue['current_temp']-273.15)*1.8 + 32) | round | int}}°F</h6>
+               <p class="card-text">{{bellevue['description']}}</p>
+               <p class="card-text"><small class="text-muted"></small></p>
+            </div>
+         </div>
+         </div>
+      </div>
+      <div class="card m-5 w-25" >
+         <div class="row g-0">
+            <div class="col-md-4">
+               <img src="http://openweathermap.org/img/w/{{austin['icon']}}.png" class="img-fluid mx-auto d-block mt-5" alt="Image">
+            </div>
+         <div class="col-md-8">
+            <div class="card-body">
+               <h5 class="card-title">{{austin['name']}}</h5>
+               <h6>{{((austin['current_temp']-273.15)*1.8 + 32) | round | int}}°F</h6>
+               <p class="card-text">{{austin['description']}}</p>
+               <p class="card-text"><small class="text-muted"></small></p>
+            </div>
+         </div>
+         </div>
+      </div>
+      <div class="card m-5 w-25" >
+         <div class="row g-0">
+            <div class="col-md-4">
+               <img src="http://openweathermap.org/img/w/{{boston['icon']}}.png" class="img-fluid mx-auto d-block mt-5" alt="Image">
+            </div>
+         <div class="col-md-8">
+            <div class="card-body">
+               <h5 class="card-title">{{boston['name']}}</h5>
+               <h6>{{((boston['current_temp']-273.15)*1.8 + 32) | round | int}}°F</h6>
+               <p class="card-text">{{boston['description']}}</p>
+               <p class="card-text"><small class="text-muted"></small></p>
+            </div>
+         </div>
          </div>
       </div>
    </div>
+
+   <!-- <div class="container">
+      <div class="card mt-5 w-50 mx-auto">
+         <div class="card-header text-center fs-2">{{bellevue['name']}}</div>
+         <div class="card-body">
+            <h5 class="card-title">Current Weather:</h5>
+            <img src="http://openweathermap.org/img/w/{{bellevue['icon']}}.png" alt="">
+            <p class="card-text">Description: </p> -->
+            <!-- convert kelvin to farenheit int-273.15)*1.8 + 32) | round | int -->
+            <!-- <p class="card-text">Tempurature: {{((bellevue['current_temp']-273.15)*1.8 + 32) | round | int}}°F</p>
+            <p class="card-text">Humidity:</p>
+         </div>
+      </div>
+   </div> -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
